[GOAPI][SWAGGER] Improved Swagger doc with new Responses Objects
