# goapi/docs/swagger.json
@@ -28,10 +28,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Redirection"
-                            }
+                            "$ref": "#/definitions/responses.OKResponse"
                         }
                     }
                 }
@@ -74,10 +71,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Redirection"
-                            }
+                            "$ref": "#/definitions/responses.OKResponse"
                         }
                     },
                     "400": {
@@ -112,7 +106,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Redirection"
+                            "$ref": "#/definitions/responses.OKResponse"
                         }
                     },
                     "404": {
@@ -145,10 +139,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Redirection"
-                            }
+                            "$ref": "#/definitions/responses.OKResponse"
                         }
                     },
                     "404": {
@@ -202,10 +193,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Redirection"
-                            }
+                            "$ref": "#/definitions/responses.OKResponse"
                         }
                     },
                     "400": {
@@ -242,7 +230,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/responses.OKResponse"
                         }
                     },
                     "404": {
@@ -298,7 +286,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/responses.OKResponse"
                         }
                     }
                 }
@@ -331,7 +319,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.SignedResponse"
+                            "$ref": "#/definitions/responses.JWTResponse"
                         }
                     },
                     "403": {
@@ -367,7 +355,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/responses.OKResponse"
                         }
                     }
                 }
@@ -375,29 +363,6 @@
         }
     },
     "definitions": {
-        "models.Redirection": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "redirect_url": {
-                    "type": "string"
-                },
-                "shortcut": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "views": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.RedirectionInput": {
             "type": "object",
             "required": [
@@ -409,40 +374,6 @@
                     "type": "string"
                 },
                 "shortcut": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.SignedResponse": {
-            "type": "object",
-            "properties": {
-                "jwt_token": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 }
             }
@@ -469,6 +400,26 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "responses.JWTResponse": {
+            "type": "object",
+            "properties": {
+                "jwt_token": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "responses.OKResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "status": {
+                    "type": "integer"
                 }
             }
         }
